# fastapi_adv

./: README.md  dev_1.ipynb  dev_2.ipynb  dev_3_1.ipynb  dev_3_2.ipynb  dev_4-3.ipynb  dev_4.ipynb  dev_4_1.ipynb  dev_4_1_main.ipynb  dev_4_2.ipynb  dev_4_4_stan.ipynb  dev_4_5.ipynb  main.py  pyproject.toml  test.ipynb
adventures/: dev_3_1.ipynb  dev_4_3.ipynb  dev_4_4_stan.ipynb  dev_4_6_anotation.ipynb  dev_4_6_anotation_test_1.py  test.ipynb
adventures/dev_5_streamlit/: app.py  app_gaussian_streamlit.py
adventures/dev_5_streamlit/streamlit_fastapi/: api.py  app.py
adventures/gau_stri_fastapi/: README.md  fastapi_app.py  streamlit_app.py
adventures/test/: dev_4_5.ipynb  dev_4_6_anotation.ipynb
