[project]
name = "zero-shot-od"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litserve>=0.2.7",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
